cambios en el último deploy en mdp

--- a/tagsdescriptions/public/index.html
+++ b/tagsdescriptions/public/index.html
@@ -31,7 +31,7 @@
     
     <link rel="stylesheet" href="%PUBLIC_URL%/font/flaticon.css"/>
 
-    <title>React App</title>
+    <title>DCS Doc</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
